<resources>
    <string name="app_name">HappyPet</string>
    <string name="title_home">首页</string>
    <string name="title_messages">关注</string>
    <string name="title_mine">我的</string>
    <string name="menu_release">+</string>
    <string name="menu_search">搜索</string>
    <string name="register_account">注册新用户</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="sign_in">登陆</string>
    <string name="save_pwd">记住密码</string>
    <string name="input_pwd">密码</string>
    <string name="input_account">账号</string>
    <string name="input_account_hint">请输入用户名</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="dynamic_time_address">地址</string>
    <string name="dynamic_username">用户名称</string>
    <string name="release_dynamic_content_text">分享您与宠物的故事...</string>
    <string name="type_text">点击请选择宠物类型</string>
    <string name="show_type_selecter">\>>选择</string>
    <string name="release_dynamic_button">提  交</string>
    <string name="menu_release_dynamic">确定</string>

</resources>
