<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@drawable/cat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/cat">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="50dp" >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:visibility="gone"
                    android:id="@+id/login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher_foreground"
                    android:layout_gravity="center"/>
                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="登录，让一切开始\n而我，为你而来"-->
                    <!--android:textSize="22sp"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textAlignment="center"-->
                    <!--android:lineSpacingExtra="12dp"/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_account"
                    android:textSize="16sp"
                    android:textColor="#ffffff"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="16sp"
                        android:focusedByDefault="false"
                        android:textIsSelectable="false"
                        android:hint="@string/input_account_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#ffffff"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_pwd"
                    android:textSize="16sp"
                    android:textColor="#ffffff"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="16sp"
                        android:focusedByDefault="false"
                        android:textIsSelectable="false"
                        android:hint="@string/input_pwd_hint"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#ffffff"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:textColor="#ffffff"
                    android:text="@string/save_pwd"
                    android:id="@+id/save_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/button_login"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:background="#00796B" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/button_reg"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_account"
                    android:textSize="14sp"
                    android:textColor="#757575"
                    android:background="#00000000"
                    android:layout_marginRight="28dp"/>

                <Button
                    android:id="@+id/button_forget"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forget_pwd"
                    android:textSize="14sp"
                    android:textColor="#757575"
                    android:background="#00000000"
                    android:layout_marginLeft="28dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>